# svgparser

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
benches/: README.md  parser.rs  path.rs
codegen/: Cargo.toml  README.md
codegen/spec/: attributes.txt  elements.txt  values.txt
codegen/src/: main.rs
examples/: README.md  extract_paths.rs  parse_data.rs  parser.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_color.rs  fuzz_length.rs  fuzz_path.rs  fuzz_style.rs  fuzz_svg.rs  fuzz_text_unescape.rs  fuzz_transform.rs
src/: aspect_ratio.rs  attribute.rs  attribute_id.rs  attribute_value.rs  color.rs  colors.rs  element.rs  element_id.rs  error.rs  length.rs  lib.rs  macros.rs  path.rs  points.rs  rgbcolor.rs  stream.rs  streamext.rs  style.rs  svg.rs  text.rs  tokenize.rs  transform.rs  value_id.rs  values_list.rs
tests/: aspect_ratio.rs  attribute_value.rs  color.rs  path.rs  points.rs  stream.rs  style.rs  svg.rs  text.rs  transform.rs
