[package]
name = "svgparser"
# When updating version, also modify html_root_url in the lib.rs and in the README
version = "0.6.2"
authors = ["Evgeniy Reizner <razrfalcon@gmail.com>"]
keywords = ["svg", "parser", "tokenizer"]
categories = ["parsing"]
license = "MPL-2.0"
description = "Featureful, pull-based, zero-allocation SVG parser."
repository = "https://github.com/RazrFalcon/libsvgparser"
documentation = "https://docs.rs/svgparser/"
readme = "README.md"

[badges]
travis-ci = { repository = "RazrFalcon/libsvgparser" }

[dependencies]
xmlparser = "0.1"
phf = "0.7.21"
log = "0.4"

[dependencies.error-chain]
version = "0.11"
default-features = false

[dev-dependencies]
bencher = "0.1"
stderrlog = "0.2"

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "path"
harness = false

[lib]
doctest = true
