[package]
name = "svgparser"
# When updating version, also modify html_root_url in the lib.rs and in the README
version = "0.8.1"
authors = ["Evgeniy Reizner <razrfalcon@gmail.com>"]
keywords = ["svg", "parser", "tokenizer"]
categories = ["parsing"]
license = "MIT/Apache-2.0"
description = "Featureful, pull-based, zero-allocation SVG parser."
repository = "https://github.com/RazrFalcon/svgparser"
documentation = "https://docs.rs/svgparser/"
readme = "README.md"

[badges]
travis-ci = { repository = "RazrFalcon/svgparser" }

[dependencies]
failure = "0.1.1"
log = "0.4"
phf = "0.7.21"
xmlparser = "0.3"

[dev-dependencies]
bencher = "0.1"
stderrlog = "0.3"

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "path"
harness = false

[lib]
doctest = true
